# derive_dumb

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
test_derive_dumb/: Cargo.toml
test_derive_dumb/src/: lib.rs
test_derive_dumb_gen/: Cargo.toml
test_derive_dumb_gen/src/: lib.rs
