[package]
name = "derive_dumb"
version = "0.1.0"
authors = ["loomaclin <loo.maclin@protonmail.com>"]
edition = "2018"
description = "Derive `Dumb` generates a structure in which all fields are public. Original structure can be converted using function call `dumb`."
repository = "https://github.com/loomaclin/derive_dumb"
documentation = "https://docs.serde.rs/derive_dumb/"
license = "MIT/Apache-2.0"

[dependencies]
syn = "1"
quote = "1"

[lib]
proc-macro = true